<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_bug"
        android:id="@+id/menuBugReport"
        android:title="@string/report_issues"/>
    <item
        android:icon="@drawable/ic_apps"
        android:id="@+id/menuMoreApps"
        android:title="@string/more_apps"/>

    <item android:title="@string/others">
        <menu>
            <group>
                <item
                    android:icon="@drawable/ic_share"
                    android:id="@+id/menuShare"
                    android:title="@string/share"/>
                <item
                    android:icon="@drawable/ic_feedback"
                    android:id="@+id/menuFeedback"
                    android:title="@string/feedback"/>
            </group>
        </menu>
    </item>

</menu>