<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:id="@+id/rootView"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/colorContent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/fileIconView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/file_icon"
                android:padding="20dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_file" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fileNameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="-"
                    android:textColor="@color/colorWhite"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/urlView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="-"
                    android:textColor="@color/colorWhite50"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/menuImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:srcCompat="@drawable/ic_vert"
                android:contentDescription="@string/option_menu_icon" />

        </LinearLayout>

        <ProgressBar
            android:indeterminate="true"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar">

            <TextView
                android:id="@+id/speedView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="-"
                android:textColor="@color/colorWhite50" />

            <TextView
                android:id="@+id/remainingTimeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="-"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite50" />
        </LinearLayout>

        <LinearLayout
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
            <ImageView
                android:id="@+id/infoImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_dark_bg"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_info"
                android:contentDescription="@string/more_information_icon" />
            <TextView
                android:id="@+id/statusView"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="-"
                android:textColor="@color/colorWhite50" />

            <ImageView
                android:id="@+id/controlImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_dark_bg"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_pause"
                android:contentDescription="@string/play_pause_delete_icon" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>